--- a/app/views/finance.html
+++ b/app/views/finance.html
@@ -9,7 +9,7 @@
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
       <p class="govuk-body">
-       <a class="govuk-link--no-visited-state" href="./daily-checks/task-list.html">
+       <a class="govuk-link--no-visited-state" href="./daily-checks/select-business-unit.html">
         Daily checks
        </a> 
       </p>
