--- a/app/views/daily-checks/reports.html
+++ b/app/views/daily-checks/reports.html
@@ -15,12 +15,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        
-        <!-- {{ mojAlert({
-            variant: "success", 
-            dismissible: false,
-            html: 'Success message'
-        }) }} -->
+
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
@@ -29,7 +24,7 @@
 
                     {{ govukButton({
                         text: "Create reports",
-                        href: "./create-reports.html"
+                        href: "./create-reports.html?reports-created=false"
                     }) }}
                     
             </div>
@@ -41,9 +36,11 @@
 
             {{ govukButton({
                 text: "Refresh",
+                href: "reports.html?refresh=true&notification=false",
                 classes: "govuk-button--secondary govuk-!-margin-bottom-4"
             }) }}
 
+            {% if data['refresh'] == "true" %}
             <div class="moj-scrollable-pane">
             <table class="govuk-table" data-module="moj-sortable-table">
                 <thead class="govuk-table__head">
@@ -148,10 +145,109 @@
                 </tbody>
             </table>
             </div>
+            {% else %}
+            <div class="moj-scrollable-pane">
+                <table class="govuk-table" data-module="moj-sortable-table">
+                    <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                        <th class="govuk-table__header" scope="col" aria-sort="none" style="width: 20%;">Date and time</th>
+                        <th class="govuk-table__header" scope="col" aria-sort="none">Title</th>
+                        <th class="govuk-table__header" scope="col" aria-sort="none">Business unit</th>
+                        <th class="govuk-table__header" scope="col" aria-sort="none">Created by</th>
+                        <th class="govuk-table__header" scope="col" aria-sort="none">Status</th>
+                    </tr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">List presented cheques</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">List reversed payments</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">List outstanding suspense</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">List witnesses</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">List dishonoured cheques</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">Run control totals</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">Run bank list</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">BACS to PC report</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">BACS repayment report</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">List unpresented cheques</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell">Cheque list and breakdowns</td>
+                        <td class="govuk-table__cell">{{data['businessUnit']}}</td>
+                        <td class="govuk-table__cell">jane.smith</td>
+                        <td class="govuk-table__cell">In progress</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            {% endif %}
+
 
         {% else %}
             <p class="govuk-body">No reports have been created today.</p>
         {% endif %}
+
+        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+            <p class="govuk-body"><a href="./task-list.html" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
 
         
 
