--- a/app/views/daily-checks/task-list.html
+++ b/app/views/daily-checks/task-list.html
@@ -41,105 +41,141 @@
                 ]
             }) }}
 
-            <h2 class="govuk-heading-m govuk-!-margin-top-5">Tasks</h2>
+            <h2 class="govuk-heading-m">To do</h2>
 
-            <p class="govuk-body"><a href="./print-cheques.html" class="govuk-link govuk-link--no-visited-state">Print cheques</a></p>
+            <ul class="govuk-task-list">
 
-            <p class="govuk-body"><a href="#" class="govuk-link govuk-link--no-visited-state">Automated presented cheques</a></p>
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                    <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./print-cheques.html" aria-describedby="print-cheques-status">
+                        Print cheques
+                    </a>
+                    </div>
+                    {% if data['chequesPrinted'] == "true" %}
+                    <div class="govuk-task-list__status" id="print-cheques-status">
+                        0 cheques to print
+                    </div>
+                    {% else %}
+                    <div class="govuk-task-list__status" id="print-cheques-status">
+                        14 cheques to print
+                    </div>
+                    {% endif %}
+                </li>
 
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                    <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./presented-cheques.html" aria-describedby="presented-cheques-status">
+                        List presented cheques
+                    </a>
+                    </div>
+                    <div class="govuk-task-list__status govuk-hint" id="presented-cheques-status">
+                    </div>
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint" data-module="edge">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="#" data-message="Sorry, we have not designed this part yet" aria-describedby="bacs-file-status">
+                    Create master BACS file
+                    </a>
+                </div>
+                <div class="govuk-task-list__status" id="bacs-file-status">
+                </div>
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bank-list.html" aria-describedby="bank-list-status">
+                    Bank list
+                    </a>
+                </div>
+                <div class="govuk-task-list__status" id="bank-list-status">
+                </div>
+                </li>
+
+                <!-- {{ govukInsetText({
+                    text: "Ensure all tills are allocated before creating control totals report"
+                }) }} -->
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./control-totals.html" aria-describedby="control-totals-status">
+                    Control totals
+                    </a>
+                </div>
+                <div class="govuk-task-list__status" id="control-totals-status">
+                </div>
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./dishonoured-cheques.html" aria-describedby="dishonoured-cheques-status">
+                    List dishonoured cheques
+                    </a>
+                </div>
+                <div class="govuk-task-list__status" id="dishonoured-cheques-status">
+                </div>
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./witnesses.html" aria-describedby="witnesses-status">
+                    List witnesses
+                    </a>
+                </div>
+                <div class="govuk-task-list__status" id="witnesses-status">
+                </div>
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./outstanding-payment.html" aria-describedby="outstanding-payment-status">
+                    List outstanding payments
+                    </a>
+                </div>
+                <div class="govuk-task-list__status" id="outstanding-payment-status">
+                </div>
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./process-presented-cheques.html" aria-describedby="automated-presented-status">
+                    Automated presented cheques
+                    </a>
+                </div>
+                {% if data['chequesProcessed'] == "true" %}
+                    <div class="govuk-task-list__status" id="print-cheques-status">
+                        0 files to process
+                    </div>
+                    {% else %}
+                    <div class="govuk-task-list__status" id="automated-presented-status">
+                        1 file to process
+                    </div>
+                    {% endif %}
+                
+                </li>
+
+                <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                <div class="govuk-task-list__name-and-hint">
+                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./unpresented-cheques.html" aria-describedby="unpresented-cheques-status">
+                    List unpresented cheques
+                    </a>
+                </div>
+                <div class="govuk-task-list__status" id="unpresented-cheques-status">
+                </div>
+                </li>
+                
+            </ul>
             
 
-
-            <!-- {{ govukTaskList({
-                idPrefix: "tasks",
-                items: [
-                {
-                    title: {
-                    text: "Print cheques",
-                    classes: "govuk-link--no-visited-state"
-                    },
-                    href: "./print-cheques.html",
-                    status: {
-                    tag: {
-                        text: "0 cheques to print",
-                        classes: "govuk-tag--blue"
-                    }
-                    }
-                },
-                {
-                    title: {
-                    text: "Automated presented cheques",
-                    classes: "govuk-link--no-visited-state"
-                    },
-                    href: "#",
-                    status: {
-                    tag: {
-                        text: "Not started",
-                        classes: "govuk-tag--grey"
-                    }
-                    }
-                }
-                ]
-            }) }} -->
-
-            <h2 class="govuk-heading-m govuk-!-margin-top-5">Reports</h2>
-
-            <p class="govuk-body"><a href="./reports.html" class="govuk-link govuk-link--no-visited-state">Create reports</a></p>
+            <p class="govuk-body"><a href="../finance.html" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
 
 
-            <!-- {% if data['reports-created'] == "true" %}
-            <p class="govuk-body"><a href="./reports.html" class="govuk-link govuk-link--no-visited-state">Create reports</a></p>
-            {% else %}
-            <p class="govuk-body"><a href="./create-reports.html" class="govuk-link govuk-link--no-visited-state">Create reports</a></p>
-            {% endif %} -->
+
             
-
-
-            <!-- {% if data['reports-created'] == "true" %}
-
-            {{ govukTaskList({
-                idPrefix: "reports",
-                items: [
-                {
-                    title: {
-                    text: "Create reports",
-                    classes: "govuk-link--no-visited-state"
-                    },
-                    href: "./reports.html",
-                    status: {
-                    tag: {
-                        text: "Completed",
-                        classes: "govuk-tag--blue"
-                    }
-                    }
-                }
-                ]
-            }) }}
-
-            {% else %}
-
-            {{ govukTaskList({
-                idPrefix: "reports",
-                items: [
-                {
-                    title: {
-                    text: "Create reports",
-                    classes: "govuk-link--no-visited-state"
-                    },
-                    href: "./create-reports.html",
-                    status: {
-                    tag: {
-                        text: "Not started",
-                        classes: "govuk-tag--grey"
-                    }
-                    }
-                }
-                ]
-            }) }}
-
-            {% endif %} -->
 
     </div>
   </div>
 
 {% endblock %}
+
+
