--- a/app/views/daily-checks/process-presented-cheques.html
+++ b/app/views/daily-checks/process-presented-cheques.html
@@ -36,6 +36,9 @@
             </ul>
             </nav>
 
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+
             <h2 class="govuk-heading-m">To process</h2>
 
             {% if data['chequesProcessed'] == "true" %}
@@ -69,6 +72,9 @@
                 </button>
 
                 <!-- <p class="govuk-body"><a href="./task-list.html" class="govuk-link govuk-link--no-visited-state">Cancel</a></p> -->
+            </div>
+
+            </div>
             </div>
 
             {% endif %}
